<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mContacto"
        android:title="@string/action_contacto"
        android:orderInCategory="100"
        >

    </item>
    <item
        android:id="@+id/mAcerca"
        android:title="@string/action_acerca"
        android:orderInCategory="100"
        >

    </item>

    <item
        android:id="@+id/mConfigCuenta"
        android:title="@string/action_configcuenta"
        android:orderInCategory="100"
        >

    </item>

    <item
        android:id="@+id/mNotificacion"
        android:title="@string/action_notificacion"
        android:orderInCategory="100"

        >

    </item>

    <item android:id="@+id/action_favorito"
        android:title="@string/action_favorito"
        android:icon="@mipmap/estrella"
        app:showAsAction="always"
        />



</menu>