<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Contacto">


    <include android:id="@+id/miActionBar"
        layout = "@layout/actionbar"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_below="@+id/miActionBar"
        >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_nombre"
        android:padding="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_email"
        android:padding="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_Comentarios"
        android:padding="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            />

    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="top"
        android:text="@string/btn_enviarComent"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        />


</LinearLayout>