<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ConfigCuenta">

    <include android:id="@+id/miActionBar"
        layout = "@layout/actionbar"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
    </include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="16pt"
        android:textColor="@color/colorBlack"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_below="@+id/miActionBar"
        >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribir_usuario"
        android:padding="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="top"
        android:text="@string/agregar_usuario"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        />


</LinearLayout>